# mcp-cpp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.claude/: clangd_client_guide.md  cpp-tools-semantic-issues.md  project_context.md  symbol_search_explorer_implementation.md  tech_debt.md
.claude/agents/: code-committer.md  code-quality-engineer.md  lead-engineer.md  quality-engineer.md  software-architect.md  unit-test-writer.md  validator-troubleshooter.md
.github/workflows/: ci.yml  publish.yml  release.yml
docker/: entrypoint.sh
docs/: clangd_index_spec.md  symbol_context_analyzer_implementation.md
src/: bazel.rs  cmake.rs  handler.rs  logging.rs  main.rs  resources.rs  server.rs  server_helpers.rs  test_utils.rs  tools.rs
src/clangd/: config.rs  error.rs  factory.rs  file_manager.rs  log_monitor.rs  mod.rs  session.rs  session_builder.rs  testing.rs  version.rs
src/clangd/index/: component_index.rs  hash.rs  idx_parser.rs  latch.rs  mod.rs  monitor.rs  progress_events.rs  progress_monitor.rs  project_index.rs
src/io/: file_buffer.rs  file_manager.rs  file_system.rs  mod.rs  process.rs  transport.rs
src/legacy_lsp/: client.rs  error.rs  manager.rs  mod.rs  types.rs
src/lsp/: client.rs  error.rs  framing.rs  jsonrpc_utils.rs  manager.rs  mod.rs  protocol.rs  testing.rs  traits.rs  types.rs
src/lsp_v2/: client.rs  framing.rs  jsonrpc_utils.rs  mod.rs  orchestrator.rs  process.rs  protocol.rs  testing.rs  traits.rs  transport.rs
src/mcp_server/: mod.rs  server.rs  server_helpers.rs
src/mcp_server/tools/: analyze_symbols.rs  analyze_symbols_v2.rs  mod.rs  project_tools.rs  search_symbols.rs  search_symbols_v2.rs  utils.rs
src/mcp_server/tools/lsp_helpers/: call_hierarchy.rs  definitions.rs  document_symbols.rs  examples.rs  hover.rs  members.rs  mod.rs  symbol_resolution.rs  type_hierarchy.rs  workspace_symbols.rs
src/mcp_server/tools/tests/: call_hierarchy_tests.rs  definitions_tests.rs  document_symbols_tests.rs  examples_tests.rs  hover_tests.rs  member_tests.rs  mod.rs  symbol_resolution_tests.rs  type_hierarchy_tests.rs
src/project/: bazel_provider.rs  cmake_provider.rs  compilation_database.rs  component.rs  component_session.rs  error.rs  meson_provider.rs  meta_project.rs  mod.rs  provider.rs  scanner.rs  workspace.rs  workspace_session.rs
src/project/index/: component_monitor.rs  integration_tests.rs  mod.rs  reader.rs  session.rs  state.rs  status.rs  trigger.rs
src/project/index/storage/: filesystem.rs  mod.rs
src/symbol/: location.rs  mod.rs  symbol.rs
src/tools/: analyze_symbols.rs  analyze_symbols_v2.rs  cmake_tools.rs  lsp_tools.rs  mod.rs  project_tools.rs  search_symbols.rs  search_symbols_v2.rs  symbol_filtering.rs  utils.rs
test/e2e/: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
test/e2e/scripts/: cleanup-test-folders.ts  inspect-test-dirs.ts  run-tests.sh
test/e2e/src/fixtures/: cmake-basic.ts  empty-project.ts
test/e2e/src/framework/: McpClient.ts  TestHelpers.ts  TestProject.ts  TestUtils.ts
test/e2e/src/framework/__tests__/: TestProject.test.ts
test/e2e/src/setup/: test-lifecycle.ts
test/e2e/src/tests/: analyze-symbol-context.test.ts  cpp-project-status.test.ts  example-with-context.test.ts  get-project-details.test.ts  list-build-dirs.test.ts  lsp-tools.test.ts  parameter-parsing.test.ts  search-symbols.test.ts
test/requests/: test_analyze_factorial.json  test_analyze_math.json  test_call_hierarchy.json  test_debug_math.json  test_inheritance.json  test_list_tools.json  test_search_all.json  test_search_factorial.json  test_search_math.json  test_search_math_class.json  test_search_math_external.json  test_search_testproject.json
test/test-meson-project/: .gitignore  meson.build
test/test-meson-project/include/: math.h  utils.h
test/test-meson-project/src/: main.cpp  math.cpp  utils.cpp
test/test-project/: .gitignore  CMakeLists.txt
test/test-project/include/: Algorithms.hpp  Container.hpp  FileStorage.hpp  IStorageBackend.hpp  LogLevel.hpp  Math.hpp  MemoryStorage.hpp  StorageBackend.hpp  StorageType.hpp  StringUtils.hpp
test/test-project/src/: Container.cpp  EnumOperators.cpp  FileStorage.cpp  Math.cpp  MemoryStorage.cpp  StringUtils.cpp  main.cpp
tools/: clangd-idx-viewer.py  generate-index.py  mcp-cli.py  read-cmake-cache.py
