[package]
name = "mcp-cpp-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A high-performance Model Context Protocol (MCP) server for C++ code analysis using clangd LSP integration"
repository = "https://github.com/mpsm/mcp-cpp"
authors = ["mpsm"]
keywords = ["mcp", "cpp", "clangd", "lsp", "code-analysis"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/mcp-cpp-server"
homepage = "https://github.com/mpsm/mcp-cpp"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
libc = "0.2"
lsp-types = "0.97"
rust-mcp-sdk = { version = "0.5.0", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
walkdir = "2.5.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
regex = "1.11.1"
sha2 = "0.10"
json_compilation_db = "1.0"

[dev-dependencies]
tempfile = "3.0"
ctor = "0.4"

[features]
default = []
# Enable tests that require a real clangd binary to be installed
clangd-integration-tests = []
# Enable detailed logging in tests (uses tracing-subscriber)
test-logging = []
# Enable integration tests for project scanning (requires cmake and meson)
project-integration-tests = []
# Enable v2 tools implementations (mutually exclusive with v1)
tools-v2 = []
